# Learning_buildLLM

./: .gitignore  README.md  pyproject.toml
ch02_working_with_text/: STUDY_GUIDE.md  ch02_working_with_text.ipynb
ch03_attention_mechanisms/: ch03_my_notes.ipynb
ch04_gpt_architecture/: ch04_gpt_architecture.ipynb
ch05_pretraining/: ch05_pretraining.ipynb
ch06_classification_finetuning/: ch06_classification_finetuning.ipynb
