[project]
name = "buildllm"
version = "0.1.0"
description = "Build a Large Language Model from Scratch - 学习实践项目"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]
